# JPO_Protocols

./: .gitignore  CMakeLists.txt  README.md
components/protocols/: CMakeLists.txt  CMakeLists_desktop.txt
components/protocols/include/: I2C.hpp  Protocol.hpp  SPI.hpp  UART.hpp
components/protocols/src/: I2C.cpp  SPI.cpp  UART.cpp
desktop/: CMakeLists.txt  main_desktop.cpp
include/: I2C.hpp  Protocol.hpp  SPI.hpp  UART.hpp
main/: CMakeLists.txt  main.cpp  main_esp32.cpp
src/: I2C.cpp  Protocol.cpp  SPI.cpp  UART.cpp
